added camera functionality to 'create patient'

--- a/src/index.html
+++ b/src/index.html
@@ -16,10 +16,32 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <script type="module" src="https://unpkg.com/@ionic/pwa-elements@latest/dist/ionicpwaelements/ionicpwaelements.esm.js"></script>
+  <script nomodule src="https://unpkg.com/@ionic/pwa-elements@latest/dist/ionicpwaelements/ionicpwaelements.js"></script>
 </head>
 
 <body>
   <app-root></app-root>
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.9.3/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyBpqn2LpO8UJe8SSIJneQuPLikA_WilPpA",
+    authDomain: "new-medicomm.firebaseapp.com",
+    databaseURL: "https://new-medicomm.firebaseio.com",
+    projectId: "new-medicomm",
+    storageBucket: "new-medicomm.appspot.com",
+    messagingSenderId: "376102936039",
+    appId: "1:376102936039:web:26c749d05dab764bebf142"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
 </body>
 
 </html>
